# Skylanders-Trap-Team-Bluetooth-Controller-Driver

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  Skylanders-Gamepad-Driver.spec  main.py  pyproject.toml
.github/workflows/: build-release.yml
